# Pavage

./: CMakeLists.txt  main.c  notes.txt  readme.txt
engine/: button.c  button.h  colors.h  file.c  file.h  gui.c  gui.h  gui_elements.c  gui_elements.h  input.c  input.h  object.c  object.h  objectdata.h  renderer.c  renderer.h  scene.c  scene.h  window.c  window.h
game/: constants.h  game.c  game.h  misc.c  misc.h  tile.c  tile.h
include/SDL2/: SDL_rwops.h  SDL_system.h  SDL_video.h
